--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,5 @@
 version: '3.1'
 services:
-  web:
-    build: .
-    image: gowebapp
-    restart: always
-    ports:
-      - 9999:9999
   db:
     image:
       postgres
@@ -13,5 +7,9 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 452814
       POSTGRES_DB: ads
-    volumes:
-      - ./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql
+  web:
+    build: .
+    ports:
+      - 5555:9999
+    links:
+      - db
